[package]
name = "sync-io"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", default-features = false, features = [
  "napi3",
  "async",
  "tokio_rt",
  "compat-mode", # for old-style module_exports
] }
napi-derive = "2"
reqwest = { version = "0.12.12", features = ["blocking"] }

[build-dependencies]
napi-build = "2"
